# PROG2400-701-Lectures

./: CMakeLists.txt
best_practices/: main.cpp  student.cpp
best_practices/include/: student.h
binary_search_tree/: main.cpp
bst_sort/: binary_search_tree.cpp  binary_search_tree.h  main.cpp
bubblesort/: main.cpp
command_line/: main.cpp
commands/: main.cpp
dynamic_arrays/: DynamicArray.cpp  DynamicArray.h  main.cpp
echo/: main.cpp
factorial/: main.cpp
insertion_sort/: main.cpp
linked_lists/: main.cpp
merge_sort/: main.cpp
palindrome/: main.cpp
queues/: main.cpp
quick_sort/: main.cpp
recursion/: main.cpp
selection_sort/: main.cpp
shell_sort/: main.cpp
stacks/: main.cpp
